# docs/swagger.yaml
@@ -41,6 +41,15 @@ definitions:
       status:
         type: string
     type: object
+  http.DefaultResponse-http_loginResponse:
+    properties:
+      data:
+        $ref: '#/definitions/http.loginResponse'
+      error_message:
+        type: string
+      status:
+        type: string
+    type: object
   http.DefaultResponse-model_Apartment:
     properties:
       data:
@@ -133,6 +142,13 @@ definitions:
     - password
     - username
     type: object
+  http.loginResponse:
+    properties:
+      token:
+        type: string
+      user:
+        $ref: '#/definitions/model.User'
+    type: object
   http.registerRequest:
     properties:
       first_name:
@@ -212,6 +228,29 @@ definitions:
       user_id:
         type: string
     type: object
+  model.User:
+    properties:
+      apartment_id:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: string
+      is_approved:
+        default: false
+        type: boolean
+      last_name:
+        type: string
+      password:
+        type: string
+      role_id:
+        $ref: '#/definitions/protopb.Role'
+      username:
+        type: string
+      username_type:
+        default: 1
+        type: integer
+    type: object
   protopb.FeedbackType:
     enum:
     - 0
@@ -244,6 +283,21 @@ definitions:
     - OrderType_PLUMBER
     - OrderType_ELECTRICITY
     - OrderType_OTHER
+  protopb.Role:
+    enum:
+    - 0
+    - 1
+    - 2
+    - 3
+    - 4
+    format: int32
+    type: integer
+    x-enum-varnames:
+    - Role_STATUS_UNSPECIFIED
+    - Role_GUEST
+    - Role_INHABITANT
+    - Role_ADMIN
+    - Role_GOD
 host: assyl-c9b2197f0ace.herokuapp.com
 info:
   contact: {}
@@ -425,7 +479,7 @@ paths:
         "200":
           description: Успех
           schema:
-            $ref: '#/definitions/http.DefaultResponse-string'
+            $ref: '#/definitions/http.DefaultResponse-http_loginResponse'
         "400":
           description: Невалидный запрос
           schema:
